--- a/TODO
+++ b/TODO
@@ -1,4 +1,4 @@
-- Parse public and private keys
+- Parse private keys
 - Verify certificate signature
 - Support key and certificate comments
 - Support SSH revocation lists
